create reachability-metadata.json as part of test