@@ -145,6 +145,18 @@
       <id>native</id>
       <build>
         <plugins>
+          <!-- testing in native profile to create reachability-metadata.json -->
+          <!-- https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <skipTests>false</skipTests>
+              <argLine>-agentlib:native-image-agent=config-output-dir=target/classes/META-INF/native-image
+                --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </plugin>
           <plugin>
             <groupId>org.graalvm.buildtools</groupId>
             <artifactId>native-maven-plugin</artifactId>
@@ -157,13 +169,6 @@
                   <goal>compile-no-fork</goal>
                 </goals>
                 <phase>package</phase>
-              </execution>
-              <execution>
-                <id>test-native</id>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <phase>test</phase>
               </execution>
             </executions>
             <configuration>
